fix feedback-thumb alignment

--- a/assets/css/_feedback.scss
+++ b/assets/css/_feedback.scss
@@ -10,10 +10,11 @@
 }
 
 #post-feedback button {
-  text-align: center;
   height: 30px;
   width: 30px;
   border: 2px solid #DDD;
+  padding-left: 4px;
+  padding-top: 0;
   background: #EEE;
   border-radius: 3px;
   cursor: pointer;
